fix: error container spacing

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -19,7 +19,8 @@
   align-items: center;
   width: 100%;
   min-height: 300px;
-  padding: 2rem;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .error-message {
